# foorplan

./: README.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml
apps/web/: .env.example  capacitor.config.ts  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/web/android/app/: build.gradle
apps/web/ios/App/App/: Info.plist  MainViewController.swift
apps/web/ios/App/App.xcodeproj/: project.pbxproj
apps/web/src/: App.tsx  index.css  main.tsx
apps/web/src/components/: AppNav.tsx  NewPropertyDialog.tsx  PropertyCard.tsx
apps/web/src/lib/: assistant.ts  billing.ts  brand.ts  nativeBackButton.ts  pwa.ts  repos.ts  supabase.ts  useDashboardData.ts  useIsMobile.ts
apps/web/src/pages/: AccountPage.tsx  DashboardPage.tsx  EditorPage.tsx  TemplatesPage.tsx
docs/floorplan-saas/: PROJECT_PLAN.md
docs/floorplan-saas/design/: Dashboard.dc.html  Editor.dc.html  Export Modal.dc.html
docs/omniplan-desktop/: RECONSTRUCTION.md
docs/omniplan-desktop/reference/: Cargo.toml  latest.json.example  release.yml  tauri.conf.json
docs/omniplan-desktop/reference/capabilities/: default.json
docs/omniplan-desktop/reference/src/: main.rs
supabase/functions/_shared/: auth.ts  stripe.ts
supabase/functions/assistant/: index.ts
supabase/functions/stripe-checkout/: index.ts
supabase/functions/stripe-portal/: index.ts
supabase/functions/stripe-webhook/: index.ts
supabase/migrations/: 0001_init.sql  0002_app_functions.sql  0003_stripe_subscription_id.sql
(+9 files in other folders)
