# Recovered dependency set for the OmniPlan desktop shell.
# Versions are the ones the shipped 0.1.0 build linked against (read from the
# binary's embedded cargo paths); bump to latest 2.x when rebuilding.

[package]
name = "omniplan"
version = "0.1.0"
description = "professional floor plan software"
authors = ["L&D Energy"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "omniplan_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.11", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2.7"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
tauri-plugin-autostart = "2"
tauri-plugin-window-state = "2.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# single-instance is desktop-only
[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-single-instance = "2.4"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
